# tracing-timing

./: .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: check.yml  msrv.yml  test.yml
ci/azure/: LICENSE  README  cargo-check.yml  cargo-clippy.yml  install-rust.yml  rustfmt.yml  test.yml
examples/: layer.rs  pretty.rs  profile.rs
src/: builder.rs  group.rs  layer.rs  lib.rs  subscriber.rs
tests/: layer.rs  lib.rs  subscriber.rs
