[package]
name = "tracing-timing"
version = "0.6.0"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

license = "MIT"

readme = "README.md"
description = "Inter-event timing metrics on top of tracing."
repository = "https://github.com/jonhoo/tracing-timing.git"

keywords = ["perf", "tracing", "profiling"]
categories = ["development-tools::profiling", "visualization"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "tracing-timing", build = "13" }
cirrus-ci = { repository = "jonhoo/tracing-timing" }
codecov = { repository = "jonhoo/tracing-timing", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[features]
layer = ["tracing-subscriber"]
default = ["layer"]

[dependencies]
tracing-core = "0.1"
hdrhistogram = "7.5.0"
slab = "0.4.1"
quanta = "0.9"
fxhash = "0.2"
crossbeam = "0.8"
indexmap = "2.0"
doc-comment = "0.3"
tracing-subscriber = { version = "0.3.8", optional = true }

[dev-dependencies]
tracing = "0.1.2"
rand = "0.8"
rand_distr = "0.4"

[profile.release]
debug = true
