[package]
name = "tracing-timing"
version = "0.7.0"
edition = "2021"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

license = "MIT"

readme = "README.md"
description = "Inter-event timing metrics on top of tracing."
repository = "https://github.com/jonhoo/tracing-timing.git"

keywords = ["perf", "tracing", "profiling"]
categories = ["development-tools::profiling", "visualization"]

[features]
default = ["layer"]
layer = ["tracing-subscriber"]

[dependencies]
tracing-core = "0.1.22"
hdrhistogram = "7.5.0"
slab = "0.4.1"
quanta = "0.12.6"
fxhash = "0.2"
crossbeam = "0.8"
indexmap = "2.10.0"
doc-comment = "0.3"
tracing-subscriber = { version = "0.3.20", optional = true }

[dev-dependencies]
itertools = "0.14.0"
rand = "0.9.1"
rand_distr = "0.5.1"
tracing = "0.1.2"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
tracing-attributes = { version = "0.1.24", optional = true }

[profile.release]
debug = true
